--- a/src/components/pages/FetchAQI.css
+++ b/src/components/pages/FetchAQI.css
@@ -119,3 +119,87 @@ body {
 .success {
     color: green;
 }
+
+.horizontal-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #CBD2A4;
+    padding: 20px;
+    border: 3px solid;
+    border-radius: 15px;
+    margin: 20px auto;
+    width: 90%;
+    max-width: 800px;
+    position: relative;
+}
+
+.live-button {
+    background-color: red;
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 0 5px red;
+    animation: glow 1.5s infinite;
+    position: absolute;
+    top: -15px; /* Adjust the positioning as needed */
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.live-text {
+    color: red;
+    font-weight: bold;
+    margin-left: 10px;
+    font-size: 16px;
+    animation: shine 1.5s infinite;
+    white-space: nowrap;
+}
+
+@keyframes glow {
+    0%, 100% {
+        box-shadow: 0 0 5px red;
+    }
+    50% {
+        box-shadow: 0 0 15px red;
+    }
+}
+
+@keyframes shine {
+    0% {
+        text-shadow: 0 0 5px red, 0 0 10px red, 0 0 15px red;
+    }
+    50% {
+        text-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px red;
+    }
+    100% {
+        text-shadow: 0 0 5px red, 0 0 10px red, 0 0 15px red;
+    }
+}
+
+.horizontal-bar-container {
+    margin: 10px 0;
+    width: 100%;
+    position: relative;
+}
+
+.horizontal-bar {
+    height: 10px;
+    background: linear-gradient(to right, green, yellow, orange, red, purple, maroon);
+    border-radius: 5px;
+    position: relative;
+}
+
+.aqi-marker {
+    width: 10px;
+    height: 20px;
+    position: absolute;
+    top: -5px;
+    border-radius: 5px;
+}
