--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -28,7 +28,7 @@ video {
 .loading-text-hero {
   margin-top: 20px;
   color: #fff;
-  font-size: 32px;
+  font-size: 3rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   white-space: nowrap;
   border-right: 2px solid white; /* Cursor effect */
